--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "faust dev",
+    "build": "faust build",
+    "start": "faust start",
+    "lint": "next lint",
+    "generate": "faust generatePossibleTypes"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.16",
+    "@faustwp/blocks": "^1.0.0",
+    "@faustwp/cli": "^1.0.1",
+    "@faustwp/core": "^1.0.1",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
